move package installation steps for centos stream 10 kickstart to one block and enable crb to try to fix the failure related to find all necessary dependencies

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -1,4 +1,4 @@
-# centos-stream-9-arm64-options.cfg
+# centos-stream-10-arm64-options.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
@@ -75,7 +75,16 @@ vim
 # -iwl7260-firmware
 %end
 
-%post
+# Google Compute Engine kickstart config for Enterprise Linux 10.
+%onerror
+echo "Build Failed!" > /dev/ttyAMA0
+shutdown -h now
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyAMA0
+
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
@@ -96,30 +105,24 @@ repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-%end
-# Google Compute Engine kickstart config for Enterprise Linux 10.
-%onerror
-echo "Build Failed!" > /dev/ttyAMA0
-shutdown -h now
-%end
 
-%post --erroronfail
-set -x
-exec &> /dev/ttyAMA0
+dnf config-manager --set-enabled crb
+dnf install -y gdisk
+
 # Delete the dummy user account.
 userdel -r gce
 
 # Import all RPM GPG keys.
-curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-rpm --import /etc/pki/rpm-gpg/google*
+# curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+# curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
+# rpm --import /etc/pki/rpm-gpg/google*
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
 # we want to leave the standard Linux firewall setup enabled but all-open.
 firewall-offline-cmd --set-default-zone=trusted
 
-# Set google-compute-engine config for EL9.
+# Set google-compute-engine config for EL10.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -127,12 +130,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
-
-# Install the Cloud SDK package.
-dnf install -y google-cloud-cli
-rpm -q google-cloud-cli
+dnf install -y --skip-broken google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
