--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
@@ -75,7 +75,16 @@ vim
 # -iwl7260-firmware
 %end
 
-%post
+# Google Compute Engine kickstart config for Enterprise Linux 10.
+%onerror
+echo "Build Failed!" > /dev/ttyS0
+shutdown -h now
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
@@ -92,16 +101,10 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 EOM
-%end
-# Google Compute Engine kickstart config for Enterprise Linux 9.
-%onerror
-echo "Build Failed!" > /dev/ttyS0
-shutdown -h now
-%end
 
-%post --erroronfail
-set -x
-exec &> /dev/ttyS0
+dnf config-manager --set-enabled crb
+dnf install -y gdisk
+
 # Delete the dummy user account.
 userdel -r gce
 
@@ -118,12 +121,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
-
-# Install the Cloud SDK package.
-dnf install -y google-cloud-cli
-rpm -q google-cloud-cli
+dnf install -y --skip-broken google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
