clean before installing guest packages to try to avoid checksum problems

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -129,6 +129,8 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
+dnf clean all
+
 # Install GCE guest packages.
 dnf install -y --skip-broken google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
