temporarily add centos stream 9 repos to stream 10 kickstart to bridge el9-based guest package dependency gaps

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -106,6 +106,11 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 
+dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/BaseOS/aarch64/os/
+dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/AppStream/aarch64/os/
+dnf config-manager --setopt="9-stream-BaseOS.priority=99" --save
+dnf config-manager --setopt="9-stream-AppStream.priority=99" --save
+
 dnf config-manager --set-enabled crb
 dnf install -y gdisk
 
@@ -129,10 +134,8 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
-dnf clean all
-
 # Install GCE guest packages.
-dnf install -y --skip-broken google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
