--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
@@ -47,7 +47,6 @@ EOM
 # The %package command begins the package selection section of kickstart.
 # Packages can be specified by group, or package name. @Base and @Core are
 # always selected by default so they do not need to be specified.
-
 %packages
 @^minimal-environment
 acpid
@@ -102,6 +101,11 @@ gpgcheck=0
 repo_gpgcheck=0
 EOM
 
+dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/
+dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os/
+dnf config-manager --setopt="9-stream-BaseOS.priority=99" --save
+dnf config-manager --setopt="9-stream-AppStream.priority=99" --save
+
 dnf config-manager --set-enabled crb
 dnf install -y gdisk
 
@@ -120,10 +124,8 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
-dnf clean all
-
 # Install GCE guest packages.
-dnf install -y --skip-broken google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
