manually configure repo files for centos stream 9 configurations in stream 10 kickstart temporarily

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -106,10 +106,24 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 
-dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/BaseOS/aarch64/os/
-dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/AppStream/aarch64/os/
-dnf config-manager --setopt="9-stream-BaseOS.priority=99" --save
-dnf config-manager --setopt="9-stream-AppStream.priority=99" --save
+tee -a /etc/yum.repos.d/centos-stream-9-baseos.repo << EOM
+[centos-stream-9-BaseOS]
+name=CentOS Stream 9 - BaseOS
+baseurl=http://mirror.stream.centos.org/9-stream/BaseOS/aarch64/os/
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+priority=99
+EOF
+tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOF
+[centos-stream-9-AppStream]
+name=CentOS Stream 9 - AppStream
+baseurl=http://mirror.stream.centos.org/9-stream/AppStream/aarch64/os/
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+priority=99
+EOF
 
 dnf config-manager --set-enabled crb
 dnf install -y gdisk
