--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
@@ -101,10 +101,26 @@ gpgcheck=0
 repo_gpgcheck=0
 EOM
 
-dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/
-dnf config-manager --add-repo http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os/
-dnf config-manager --setopt="9-stream-BaseOS.priority=99" --save
-dnf config-manager --setopt="9-stream-AppStream.priority=99" --save
+tee -a /etc/yum.repos.d/centos-stream9-baseos.repo << EOM
+[centos-stream-9-BaseOS]
+name=CentOS Stream 9 - BaseOS
+baseurl=http://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+priority=99
+EOF
+tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOF
+[centos-stream-9-AppStream]
+name=CentOS Stream 9 - AppStream
+baseurl=http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os/
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+priority=99
+EOF
+
+dnf clean all
 
 dnf config-manager --set-enabled crb
 dnf install -y gdisk
