Use correct marker label pairs

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -114,8 +114,8 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 priority=99
-EOF
-tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOF
+EOM
+tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOM
 [centos-stream-9-AppStream]
 name=CentOS Stream 9 - AppStream
 baseurl=http://mirror.stream.centos.org/9-stream/AppStream/aarch64/os/
@@ -123,7 +123,7 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 priority=99
-EOF
+EOM
 
 dnf config-manager --set-enabled crb
 dnf install -y gdisk
