--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_x86.cfg
@@ -109,8 +109,8 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 priority=99
-EOF
-tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOF
+EOM
+tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOM
 [centos-stream-9-AppStream]
 name=CentOS Stream 9 - AppStream
 baseurl=http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os/
@@ -118,7 +118,7 @@ enabled=1
 gpgcheck=0
 repo_gpgcheck=0
 priority=99
-EOF
+EOM
 
 dnf clean all
 
