--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -84,42 +84,6 @@ shutdown -h now
 set -x
 exec &> /dev/ttyS0
 
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-[google-compute-engine]
-name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
-enabled=1
-gpgcheck=0
-repo_gpgcheck=0
-EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-[google-cloud-sdk]
-name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
-enabled=1
-gpgcheck=0
-repo_gpgcheck=0
-EOM
-
-tee -a /etc/yum.repos.d/centos-stream9-baseos.repo << EOM
-[centos-stream-9-BaseOS]
-name=CentOS Stream 9 - BaseOS
-baseurl=http://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/
-enabled=1
-gpgcheck=0
-repo_gpgcheck=0
-priority=99
-EOM
-tee /etc/yum.repos.d/centos-stream-9-appstream.repo << EOM
-[centos-stream-9-AppStream]
-name=CentOS Stream 9 - AppStream
-baseurl=http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os/
-enabled=1
-gpgcheck=0
-repo_gpgcheck=0
-priority=99
-EOM
-
 dnf clean all
 
 dnf config-manager --set-enabled crb
@@ -141,8 +105,12 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+gsutil cp gs://gce-image-build-resources/linux/daisy-el9-20250721-20_28_08-htdd8_daisy-build-package-20250721-20_28_09-np0hb_outs_google-guest-agent-20250721.00-g1.el9.x86_64.rpm ./daisy-el9.rpm
+rpm --force -ivh --no-deps ./daisy-el9.rpm
+rm ./daisy-el9.rpm
+
+# dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+# rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
