--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -105,7 +105,7 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-gsutil cp gs://gce-image-build-resources/linux/daisy-el9-20250721-20_28_08-htdd8_daisy-build-package-20250721-20_28_09-np0hb_outs_google-guest-agent-20250721.00-g1.el9.x86_64.rpm ./daisy-el9.rpm
+curl -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_28_08-htdd8_daisy-build-package-20250721-20_28_09-np0hb_outs_google-guest-agent-20250721.00-g1.el9.x86_64.rpm
 rpm --force -ivh --no-deps ./daisy-el9.rpm
 rm ./daisy-el9.rpm
 
