--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -109,7 +109,7 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-gsutil cp gs://gce-image-build-resources/linux/daisy-el9-20250721-20_55_08-b9s2q_daisy-build-package-20250721-20_55_08-bqvmz_outs_google-guest-agent-20250721.00-g1.el9.aarch64.rpm ./daisy-el9.rpm
+curl -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_55_08-b9s2q_daisy-build-package-20250721-20_55_08-bqvmz_outs_google-guest-agent-20250721.00-g1.el9.aarch64.rpm
 rpm --force -ivh --no-deps ./daisy-el9.rpm
 rm ./daisy-el9.rpm
 
