try to redirect default console logging for centos stream 10 images in kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -80,6 +80,15 @@ echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
 %end
 
+%post
+cat <<'EOF' > /etc/rsyslog.d/90-google.conf
+daemon,kern.* /dev/console
+EOF
+
+systemctl daemon-reload
+systemctl restart rsyslog
+%end
+
 %post --erroronfail
 set -x
 exec &> /dev/ttyS0
