--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -81,6 +81,15 @@ echo "Build Failed!" > /dev/ttyAMA0
 shutdown -h now
 %end
 
+%post
+cat <<'EOF' > /etc/rsyslog.d/90-google.conf
+daemon,kern.* /dev/console
+EOF
+
+systemctl daemon-reload
+systemctl restart rsyslog
+%end
+
 %post --erroronfail
 set -x
 exec &> /dev/ttyAMA0
