fix nodeps flag for rpm for centos stream 10 kickstart files

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -119,7 +119,7 @@ EOL
 
 # Install GCE guest packages.
 curl -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_55_08-b9s2q_daisy-build-package-20250721-20_55_08-bqvmz_outs_google-guest-agent-20250721.00-g1.el9.aarch64.rpm
-rpm --force -ivh --no-deps ./daisy-el9.rpm
+rpm --force -ivh --nodeps ./daisy-el9.rpm
 rm ./daisy-el9.rpm
 
 # dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
