--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -115,7 +115,7 @@ EOL
 
 # Install GCE guest packages.
 curl -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_28_08-htdd8_daisy-build-package-20250721-20_28_09-np0hb_outs_google-guest-agent-20250721.00-g1.el9.x86_64.rpm
-rpm --force -ivh --no-deps ./daisy-el9.rpm
+rpm --force -ivh --nodeps ./daisy-el9.rpm
 rm ./daisy-el9.rpm
 
 # dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
