use access token for curl for centos stream 10 kickstarts

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -118,7 +118,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-curl -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_55_08-b9s2q_daisy-build-package-20250721-20_55_08-bqvmz_outs_google-guest-agent-20250721.00-g1.el9.aarch64.rpm
+ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
+curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_55_08-b9s2q_daisy-build-package-20250721-20_55_08-bqvmz_outs_google-guest-agent-20250721.00-g1.el9.aarch64.rpm
 rpm --force -ivh --nodeps ./daisy-el9.rpm
 rm ./daisy-el9.rpm
 
