--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -115,9 +115,18 @@ EOL
 
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
-curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./daisy-el9.rpm https://storage.googleapis.com/gce-image-build-resources/linux/daisy-el9-20250721-20_28_08-htdd8_daisy-build-package-20250721-20_28_09-np0hb_outs_google-guest-agent-20250721.00-g1.el9.x86_64.rpm
-rpm --force -ivh --nodeps ./daisy-el9.rpm
-rm ./daisy-el9.rpm
+curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./metadata-script-runner-x86-01.tar.gz https://storage.googleapis.com/gce-image-build-resources/linux/metadata-script-runner-x86-01.tar.gz
+tar -xzvf metadata-script-runner-x86-01.tar.gz
+rm -f metadata-script-runner-x86-01.tar.gz
+
+sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
+sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
+sudo mv metadata-script-runner/google-startup-scripts.service /etc/systemd/system
+
+rm -rf metadata-script-runner
+
+sudo systemctl daemon-reload
+sudo systemctl enable google-startup-scripts.service
 
 # dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
 # rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
