fix selinux and executable permissions for google metadata script runner for centos stream 10 kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -123,6 +123,11 @@ sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
 sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
 sudo mv metadata-script-runner/google-startup-scripts.service /etc/systemd/system
 
+sudo chmod +x /usr/bin/google_metadata_script_runner*
+sudo restorecon /usr/bin/google_metadata_script_runner_adapt
+sudo restorecon /usr/bin/google_metadata_script_runner
+sudo restorecon /etc/systemd/system/google-startup-scripts.service
+
 rm -rf metadata-script-runner
 
 sudo systemctl daemon-reload
