attempt to install gcloud and gsutil from tarball for centos stream 10 kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -113,6 +113,11 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
+curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-linux-x86_64.tar.gz
+tar -xf google-cloud-cli-linux-x86_64.tar.gz
+./google-cloud-sdk/install.sh --quiet
+rm -f google-cloud-cli-linux-x86_64.tar.gz
+
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
 curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./metadata-script-runner-x86-01.tar.gz https://storage.googleapis.com/gce-image-build-resources/linux/metadata-script-runner-x86-01.tar.gz
