fix path for google cloud sdk command line tools for centos stream 10 kickstarts

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -121,7 +121,7 @@ curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-
 tar -xf google-cloud-cli-linux-arm.tar.gz
 ./google-cloud-sdk/install.sh --quiet
 rm -f google-cloud-cli-linux-arm.tar.gz
-echo "source '~/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
+echo "source '/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
 
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
