--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -123,7 +123,7 @@ ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance
 curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./metadata-script-runner-x86-01.tar.gz https://storage.googleapis.com/gce-image-build-resources/linux/metadata-script-runner-x86-01.tar.gz
 tar -xzvf metadata-script-runner-x86-01.tar.gz
 rm -f metadata-script-runner-x86-01.tar.gz
-echo "source '~/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
+echo "source '/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
 
 sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
 sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
