add debugging info for gsutil pathing for centos stream 10 kickstart files

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -124,6 +124,11 @@ curl -H "Authorization: Bearer ${ACCESS_TOKEN}" -o ./metadata-script-runner-x86-
 tar -xzvf metadata-script-runner-x86-01.tar.gz
 rm -f metadata-script-runner-x86-01.tar.gz
 echo "source '/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
+ls /google-cloud-sdk
+cat /google-cloud-sdk/path.bash.inc
+source ~/.bashrc
+echo $PATH
+which gsutil
 
 sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
 sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
