--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -122,6 +122,11 @@ tar -xf google-cloud-cli-linux-arm.tar.gz
 ./google-cloud-sdk/install.sh --quiet
 rm -f google-cloud-cli-linux-arm.tar.gz
 echo "source '/google-cloud-sdk/path.bash.inc'" >> ~/.bashrc
+ls /google-cloud-sdk
+cat /google-cloud-sdk/path.bash.inc
+source ~/.bashrc
+echo $PATH
+which gsutil
 
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
