configure /etc/profile.d for centos stream 10 kickstart to ensure google cloud sdk binaries are in the path as well

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -129,6 +129,14 @@ cat /google-cloud-sdk/path.bash.inc
 source ~/.bashrc
 echo $PATH
 which gsutil
+cat << 'EOF' > /etc/profile.d/google-cloud-sdk.sh
+
+if [ -f '/google-cloud-sdk/path.bash.inc' ]; then
+  source '/google-cloud-sdk/path.bash.inc'
+fi
+EOF
+
+chmod +x /etc/profile.d/google-cloud-sdk.sh
 
 sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
 sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
