--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -127,6 +127,14 @@ cat /google-cloud-sdk/path.bash.inc
 source ~/.bashrc
 echo $PATH
 which gsutil
+cat << 'EOF' > /etc/profile.d/google-cloud-sdk.sh
+
+if [ -f '/google-cloud-sdk/path.bash.inc' ]; then
+  source '/google-cloud-sdk/path.bash.inc'
+fi
+EOF
+
+chmod +x /etc/profile.d/google-cloud-sdk.sh
 
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
