add additional path export to bashrc for centos stream 10 kickstart files

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -137,6 +137,7 @@ fi
 EOF
 
 chmod +x /etc/profile.d/google-cloud-sdk.sh
+echo "$PATH=$PATH:/google-cloud-sdk/bin" >> ~/.bashrc
 
 sudo mv metadata-script-runner/google_metadata_script_runner_adapt /usr/bin
 sudo mv metadata-script-runner/google_metadata_script_runner /usr/bin
