--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -135,6 +135,7 @@ fi
 EOF
 
 chmod +x /etc/profile.d/google-cloud-sdk.sh
+echo "$PATH=$PATH:/google-cloud-sdk/bin" >> ~/.bashrc
 
 # Install GCE guest packages.
 ACCESS_TOKEN=$(curl "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token" -H "Metadata-Flavor: Google" | jq -r .access_token)
