--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -75,6 +75,27 @@ vim
 # -iwl7260-firmware
 %end
 
+%post
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-compute-engine]
+name=Google Compute Engine
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-aarch64-stable
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
+EOM
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sdk]
+name=Google Cloud SDK
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-aarch64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
+EOM
+%end
+
 # Google Compute Engine kickstart config for Enterprise Linux 10.
 %onerror
 echo "Build Failed!" > /dev/ttyAMA0
@@ -101,9 +122,8 @@ dnf install -y gdisk
 userdel -r gce
 
 # Import all RPM GPG keys.
-# curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-# rpm --import /etc/pki/rpm-gpg/google*
+curl -o /etc/pki/rpm-gpg/rpm-package-key-v10.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
+rpm --import /etc/pki/rpm-gpg/rpm-package-key-v10.gpg
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
@@ -157,8 +177,13 @@ rm -rf metadata-script-runner
 sudo systemctl daemon-reload
 sudo systemctl enable google-startup-scripts.service
 
-# dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
-# rpm -q google-compute-engine google-osconfig-agent gce-disk-expand google-cloud-cli
+# Install GCE guest packages.
+dnf install -y google-compute-engine gce-disk-expand
+rpm -q google-compute-engine gce-disk-expand
+
+# Install the Cloud SDK package.
+dnf install -y google-cloud-cli
+rpm -q google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
