--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -95,33 +95,30 @@ vim
 -zd1211-firmware
 %end
 
-# TODO: Enable gpgchecks when ready
 %post
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-aarch64-stable
 enabled=1
-gpgcheck=0
+gpgcheck=1
 repo_gpgcheck=0
-gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
 EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-aarch64
 enabled=1
-gpgcheck=0
+gpgcheck=1
 repo_gpgcheck=0
-gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
 EOM
 %end
 %post --erroronfail
 set -x
 exec &> /dev/ttyAMA0
-dnf -y install google-rhui-client-rhel9
+dnf -y install google-rhui-client-rhel10
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 9.
@@ -137,12 +134,8 @@ exec &> /dev/ttyAMA0
 userdel -r gce
 
 # Import all RPM GPG keys.
-# TODO: Uncomment this logic when ready
-# curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-# rpm --import /etc/pki/rpm-gpg/google*
-
-echo 9 > /etc/dnf/vars/releasever
+curl -o /etc/pki/rpm-gpg/rpm-package-key-v10.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
+rpm --import /etc/pki/rpm-gpg/rpm-package-key-v10.gpg
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
@@ -157,14 +150,12 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
+dnf install -y google-compute-engine gce-disk-expand
+rpm -q google-compute-engine gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
-
-rm -f /etc/dnf/vars/releasever
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
