temporarily point the cloud sdk repo to a regional endpoint

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -88,7 +88,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-aarch64
+baseurl=https://us-yum.pkg.dev/projects/google.com:cloudsdktool/cloud-sdk-el10-aarch64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
