--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
@@ -108,7 +108,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-x86_64
+baseurl=https://us-yum.pkg.dev/projects/google.com:cloudsdktool/cloud-sdk-el10-x86-64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
