temporarily remove disk-expand from el10 image builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -139,8 +139,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine gce-disk-expand
-rpm -q google-compute-engine gce-disk-expand
+dnf install -y google-compute-engine
+rpm -q google-compute-engine
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
