--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -178,8 +178,8 @@ sudo systemctl daemon-reload
 sudo systemctl enable google-startup-scripts.service
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine gce-disk-expand
-rpm -q google-compute-engine gce-disk-expand
+dnf install -y google-compute-engine
+rpm -q google-compute-engine
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
