add disk-expand back in to el 10 image builds and point sdk repo to non-regional url bring image build kickstarts back into parity with el9 kickstarts

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -48,7 +48,6 @@ EOM
 # Packages can be specified by group, or package name. @Base and @Core are
 # always selected by default so they do not need to be specified.
 %packages
-@^minimal-environment
 acpid
 dnf-automatic
 net-tools
@@ -57,21 +56,23 @@ python3
 rng-tools
 tar
 vim
+-gpm
+-irqbalance
 -microcode_ctl
-# -linux-firmware-whence
-# -linux-firmware
-# -iwl100-firmware
-# -iwl1000-firmware
-# -iwl105-firmware
-# -iwl135-firmware
-# -iwl2000-firmware
-# -iwl2030-firmware
-# -iwl3160-firmware
-# -iwl5000-firmware
-# -iwl5150-firmware
-# -iwl6000g2a-firmware
-# -iwl6050-firmware
-# -iwl7260-firmware
+-linux-firmware-whence
+-linux-firmware
+-iwl100-firmware
+-iwl1000-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
+-iwl5000-firmware
+-iwl5150-firmware
+-iwl6000g2a-firmware
+-iwl6050-firmware
+-iwl7260-firmware
 %end
 
 %post
@@ -87,7 +88,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://us-yum.pkg.dev/projects/google.com:cloudsdktool/cloud-sdk-el10-x86-64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -101,23 +102,9 @@ echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
 %end
 
-%post
-cat <<'EOF' > /etc/rsyslog.d/90-google.conf
-daemon,kern.* /dev/console
-EOF
-
-systemctl daemon-reload
-systemctl restart rsyslog
-%end
-
 %post --erroronfail
 set -x
 exec &> /dev/ttyS0
-
-dnf clean all
-
-dnf config-manager --set-enabled crb
-dnf install -y gdisk
 
 # Delete the dummy user account.
 userdel -r gce
@@ -139,8 +126,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine
-rpm -q google-compute-engine
+dnf install -y google-compute-engine gce-disk-expand
+rpm -q google-compute-engine gce-disk-expand
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
