--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -49,7 +49,6 @@ EOM
 # always selected by default so they do not need to be specified.
 
 %packages
-@^minimal-environment
 acpid
 dnf-automatic
 net-tools
@@ -58,21 +57,23 @@ python3
 rng-tools
 tar
 vim
+-gpm
+-irqbalance
 -microcode_ctl
-# -linux-firmware-whence
-# -linux-firmware
-# -iwl100-firmware
-# -iwl1000-firmware
-# -iwl105-firmware
-# -iwl135-firmware
-# -iwl2000-firmware
-# -iwl2030-firmware
-# -iwl3160-firmware
-# -iwl5000-firmware
-# -iwl5150-firmware
-# -iwl6000g2a-firmware
-# -iwl6050-firmware
-# -iwl7260-firmware
+-linux-firmware-whence
+-linux-firmware
+-iwl100-firmware
+-iwl1000-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
+-iwl5000-firmware
+-iwl5150-firmware
+-iwl6000g2a-firmware
+-iwl6050-firmware
+-iwl7260-firmware
 %end
 
 %post
@@ -102,21 +103,9 @@ echo "Build Failed!" > /dev/ttyAMA0
 shutdown -h now
 %end
 
-%post
-cat <<'EOF' > /etc/rsyslog.d/90-google.conf
-daemon,kern.* /dev/console
-EOF
-
-systemctl daemon-reload
-systemctl restart rsyslog
-%end
-
 %post --erroronfail
 set -x
 exec &> /dev/ttyAMA0
-
-dnf config-manager --set-enabled crb
-dnf install -y gdisk
 
 # Delete the dummy user account.
 userdel -r gce
@@ -138,8 +127,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine
-rpm -q google-compute-engine
+dnf install -y google-compute-engine gce-disk-expand
+rpm -q google-compute-engine gce-disk-expand
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
