--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
@@ -108,7 +108,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://us-yum.pkg.dev/projects/google.com:cloudsdktool/cloud-sdk-el10-x86-64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -151,7 +151,7 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine
+dnf install -y google-compute-engine gce-disk-expand
 rpm -q google-compute-engine
 
 # Install the Cloud SDK package.
