--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -1,4 +1,4 @@
-# rhel-9-options.cfg
+# rhel-10-options.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
@@ -108,7 +108,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://us-yum.pkg.dev/projects/google.com:cloudsdktool/cloud-sdk-el10-aarch64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-aarch64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -150,8 +150,8 @@ set_boto_config = false
 EOL
 
 # Install GCE guest packages.
-dnf install -y google-compute-engine
-rpm -q google-compute-engine || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
+dnf install -y google-compute-engine gce-disk-expand
+rpm -q google-compute-engine gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
