verify that disk expand is installed in rhel 10 kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
@@ -152,7 +152,7 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine gce-disk-expand
-rpm -q google-compute-engine
+rpm -q google-compute-engine gce-disk-expand
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
