Exclude conflicting firmware packages for x86 and arm builds for centos stream 10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -60,6 +60,8 @@ vim
 -gpm
 -irqbalance
 -microcode_ctl
+-iwlwifi-dvm-firmware
+-amd-gpu-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
