Exclude more conflicting firmware packages for x86 and arm builds for centos stream 10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -60,6 +60,7 @@ vim
 -irqbalance
 -microcode_ctl
 -iwlwifi-dvm-firmware
+-iwlwifi-mvm-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
