Exclude more conflicting firmware packages for x86 and arm builds for centos stream 10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -63,6 +63,7 @@ vim
 -iwlwifi-dvm-firmware
 -iwlwifi-mvm-firmware
 -amd-gpu-firmware
+-intel-gpu-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
