--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -61,6 +61,7 @@ vim
 -microcode_ctl
 -iwlwifi-dvm-firmware
 -iwlwifi-mvm-firmware
+-amd-gpu-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
