Exclude more conflicting firmware packages for x86 and arm builds for centos stream 10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -62,6 +62,8 @@ vim
 -iwlwifi-dvm-firmware
 -iwlwifi-mvm-firmware
 -amd-gpu-firmware
+-intel-gpu-firmware
+-nvidia-gpu-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
