--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -64,6 +64,7 @@ vim
 -iwlwifi-mvm-firmware
 -amd-gpu-firmware
 -intel-gpu-firmware
+-nvidia-gpu-firmware
 -linux-firmware-whence
 -linux-firmware
 -iwl100-firmware
