add rhel 10 byos

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
@@ -31,7 +31,7 @@ udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
 # build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="biosdevname=0"
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
@@ -55,9 +55,6 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -99,7 +96,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-aarch64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-x86-64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -108,7 +105,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-aarch64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -118,19 +115,20 @@ EOM
 
 %post --erroronfail
 set -x
-exec &> /dev/ttyAMA0
+exec &> /dev/ttyS0
+dnf config-manager --set-disabled google-cloud-cli
 dnf -y install google-rhui-client-rhel10
 %end
 
-# Google Compute Engine kickstart config for Enterprise Linux 9.
+# Google Compute Engine kickstart config for Enterprise Linux 10.
 %onerror
-echo "Build Failed!" > /dev/ttyAMA0
+echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
 %end
 
 %post --erroronfail
 set -x
-exec &> /dev/ttyAMA0
+exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
 
@@ -143,7 +141,7 @@ rpm --import /etc/pki/rpm-gpg/rpm-package-key-v10.gpg
 # we want to leave the standard Linux firewall setup enabled but all-open.
 firewall-offline-cmd --set-default-zone=trusted
 
-# Set google-compute-engine config for EL9.
+# Set google-compute-engine config for EL10.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -152,9 +150,11 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
+# Re-enable the cloud SDK repo
+dnf config-manager --set-enabled google-cloud-cli
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
 
@@ -218,7 +218,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyAMA0
+%post --nochroot --log=/dev/ttyS0
 set -x
 rm -Rf /mnt/sysimage/tmp/*
 %end
+
